--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p>TO BE EDITED</p>
+<head>
+<style type="text/css">
+    body {scrolling:no;
+}
+    iframe {position:absolute;
+    z-index:1;
+    top:0px;
+    left:0px;
+}
+</style>
+</head>
+<body>
+    <iframe src="http://mazarifox.nexusfox.ml/nolan" height="100%" width="100%" frameborder="0"></iframe>
+</body>
